discussion/kv_engine/173282/173282_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51715: Timeout SeqnoPersistenceRequests when no data is flushed

Prior to this change, a SeqnoPersistenceRequest would wait 'forever'
if no data is moving through the vbucket and never timeout. This is
because execution into the code managing the SeqnoPersistenceRequests
only occurs from a successful flush of an item.

This is addressed in this commit by the addition of a new task which
will run when there are SeqnoPersistenceRequests to expire. This new
task runs for persistent and ephemeral (replacing
EphemeralBucket::NotifyHighPriorityReqTask) and aims to only run when
notifications might need expiring.

The configuration is updated so that 0 is a legal value for
"seqno_persistence_timeout", enabling tests with minimal real run-time.

Change-Id: I603ad4c8f62e496d5d6bea80bc5ef4f196714989

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-04-08 08:16:42.000000000
Message: 
Uploaded patch set 7: Patch Set 6 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2022-04-08 08:21:27.000000000
Message: 
Patch Set 7:

(1 comment)
Line:58, engines/ep/src/seqno_persistence_notify_task.cc -> hmm this still doesn't stop T2 setting 2 seconds

----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-08 08:29:30.000000000
Message: 
Patch Set 7: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45124/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45124/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37902/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37902/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17402/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17402/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19335/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19335/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6186/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18305/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18305/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18639/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18639/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26713/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26713/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6246/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6246/ )

Test exceeded the timeout:
[2022-04-08T08:29:21.557Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6246/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16531/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ephemeral_vb.cc:278:11: error: member access into incomplete type "KVBucket" [clang-diagnostic-error]
    bucket->addVbucketWithSeqnoPersistenceRequest(
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.h:51:7: note: forward declaration of "KVBucket"
class KVBucket;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16531/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ephemeral_vb.cc:278:11:
error: member access into incomplete type "KVBucket" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16531/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15466/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2022-04-08 09:59:04.000000000
MISMATCHED INLINE COMMENT
Line:58, engines/ep/src/seqno_persistence_notify_task.cc -> Done
----------------------------------------------------------------------------------------------------------------------
